// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Upload Test css 1`] = `
.c4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  display: inline-block;
}

.c4.right {
  position: absolute;
  right: 12px;
  top: 50%;
  -webkit-transform: translate(0,-50%);
  -ms-transform: translate(0,-50%);
  transform: translate(0,-50%);
}

.c4.delete {
  display: none;
}

.c4.areaIcon {
  font-size: 36px;
}

.c4.icon-mark {
  margin: 0 6px 0 0;
}

.c4.loading {
  -webkit-animation: iECmZH 0.8s linear infinite;
  animation: iECmZH 0.8s linear infinite;
  margin: 0 12px 0 0;
}

.c2 {
  width: 100%;
  display: none;
}

.c1 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: border-box;
}

.c3 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: hidden;
  box-sizing: border-box;
  position: relative;
}

.c0 {
  position: relative;
  box-sizing: border-box;
  height: 100%;
}

<div
  className="c0"
  style={Object {}}
>
  <div
    className="c1"
    style={Object {}}
  >
    <input
      accept="*"
      className="c2"
      disabled={false}
      id="upload"
      multiple={false}
      onChange={[Function]}
      style={Object {}}
      type="file"
    />
    <div
      className="c3"
      disabled={false}
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      style={
        Object {
          "borderBottomColor": "#d0d3da",
          "borderBottomLeftRadius": "0.4rem",
          "borderBottomRightRadius": "0.4rem",
          "borderBottomStyle": "solid",
          "borderBottomWidth": "0.1rem",
          "borderLeftColor": "#d0d3da",
          "borderLeftStyle": "solid",
          "borderLeftWidth": "0.1rem",
          "borderRightColor": "#d0d3da",
          "borderRightStyle": "solid",
          "borderRightWidth": "0.1rem",
          "borderTopColor": "#d0d3da",
          "borderTopLeftRadius": "0.4rem",
          "borderTopRightRadius": "0.4rem",
          "borderTopStyle": "solid",
          "borderTopWidth": "0.1rem",
          "color": "#c2c5ce",
          "fontSize": "1.4rem",
          "height": "3rem",
          "paddingBottom": "0rem",
          "paddingLeft": "1.2rem",
          "paddingRight": "0rem",
          "paddingTop": "0rem",
        }
      }
    >
      <i
        className="lugia-icon-financial_upload  right   c4"
        disabled={false}
        onClick={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={Object {}}
      />
      请将文件拖到此处
    </div>
  </div>
</div>
`;

exports[`Upload Test css getIcon 1`] = `
.c0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
}

<i
  className="lugia-icon-financial_key    c0"
  onClick={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  style={Object {}}
/>
`;

exports[`Upload Test css getIcon picture 1`] = `
.c1 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
}

.c0 {
  display: inline-block;
  position: relative;
  vertical-align: middle;
  color: #646A6E;
}

.c0:hover > div {
  display: block;
}

<div
  className="c0"
  style={Object {}}
>
  <i
    className="lugia-icon-financial_key    c1"
    onClick={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    style={Object {}}
  />
</div>
`;

exports[`Upload Test css getIcon undefined 1`] = `
.c1 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
}

.c0 {
  display: inline-block;
  position: relative;
  vertical-align: middle;
  color: #646A6E;
}

.c0:hover > div {
  display: block;
}

<div
  className="c0"
  style={Object {}}
>
  <i
    className="undefined    c1"
    onClick={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    style={Object {}}
  />
</div>
`;
